GNOME Bugzilla – Bug 567087
gi_cclosure_marshal_generic
Last modified: 2015-02-07 16:54:53 UTC
Since gobject-introspection depends on ffi and GObject, it makes sense as a temporary home for jdahlin's patch from bug 401080. I've attached an adapted version of that patch suitable for gobject-introspection, until such time as the GObject maintainers accept a dependency on ffi. (Which maybe happens when introspection is stable and possibly merged into GObject?)
Created attachment 126061 [details] [review] adapted version of jdahlin's generic marshaler This patch is just adapted from jdahlin's patch in bug 401080.
Comment on attachment 126061 [details] [review] adapted version of jdahlin's generic marshaler I can't see any changes from the one I wrote. If you copy the implementation you should probably copy the tests too.
Created attachment 126129 [details] [review] Bug 567087 - generic marshaller Since GObject-Introspection depends on both ffi and GObject, it's a convenient home for jdahlin's generic signal marshaller until such time as GObject can directly depend on ffi. When it gets added to GObject, we can simply point our marshaller at that one.
Just a heads up: I've included an adapted version of the patch in comment 3 on the gdbus-codegen branch of GLib: http://git.gnome.org/browse/glib/commit/?h=gdbus-codegen&id=88ab35f3cb6127036361e421987a127bddb989c8 The plan is to make this available in libgobject for 2.30.
(In reply to comment #4) > Just a heads up: I've included an adapted version of the patch in comment 3 on > the gdbus-codegen branch of GLib: > > > http://git.gnome.org/browse/glib/commit/?h=gdbus-codegen&id=88ab35f3cb6127036361e421987a127bddb989c8 > > The plan is to make this available in libgobject for 2.30. FYI this is now on GLib master.
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]